[package]
name = "aoc2019"
description = "Advent of Code 2019 - my answers"
version = "0.1.0"
authors = ["Daniel Lin <ephemient@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ephemient/aoc2019/tree/rs"
build = "build.rs"

[build-dependencies]
build_const = "0.1"

[dependencies]
build_const = "0.1"
collecting-hashmap = "0.2"
crossbeam-channel = "0.4"
fallible-iterator = "0.2"
itertools = "0.8"
lazy_static = "1"
regex = "1"
