[metadata]
name = aoc2019
version = attr: aoc2019.VERSION
url = https://github.com/ephemient/aoc2019/tree/py
author = Daniel Lin
author_email = ephemient@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD
    Operating System :: OS Independent
license = Simplified BSD
license_file = LICENSE
description = Advent of Code 2019 - my answers
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = True
python_requires = >=3.8
packages=find:
package_dir=
    =src
include_package_data = True

[options.entry_points]
console_scripts =
    aoc2019 = aoc2019.main:main
aoc2019.days =
    1 = aoc2019.day1:parts
    2 = aoc2019.day2:parts
    3 = aoc2019.day3:parts
    4 = aoc2019.day4:parts
    5 = aoc2019.day5:parts
    6 = aoc2019.day6:parts
    7 = aoc2019.day7:parts
    8 = aoc2019.day8:parts
    9 = aoc2019.day9:parts
    10 = aoc2019.day10:parts
    11 = aoc2019.day11:parts

[options.packages.find]
where=src

[options.package_data]
* = day*.txt

[tool:pytest]
testpaths = tests
