[metadata]
name = aoc2019
version = attr: aoc2019.VERSION
url = https://github.com/ephemient/aoc2019/tree/py
author = Daniel Lin
author_email = ephemient@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD
    Operating System :: OS Independent
license = Simplified BSD
license_file = LICENSE
description = Advent of Code 2019 - my answers
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = True
python_requires = >=3.8
packages=find:
package_dir=
    =src
include_package_data = True

[options.entry_points]
console_scripts =
    aoc2019 = aoc2019.main:main
aoc2019.days =
    1 = aoc2019.day1:parts
    2 = aoc2019.day2:parts
    3 = aoc2019.day3:parts
    4 = aoc2019.day4:parts
    5 = aoc2019.day5:parts
    6 = aoc2019.day6:parts
    7 = aoc2019.day7:parts
    8 = aoc2019.day8:parts
    9 = aoc2019.day9:parts
    10 = aoc2019.day10:parts
    11 = aoc2019.day11:parts
    12 = aoc2019.day12:parts
    13 = aoc2019.day13:parts
    14 = aoc2019.day14:parts
    15 = aoc2019.day15:parts
    16 = aoc2019.day16:parts
    17 = aoc2019.day17:parts
    18 = aoc2019.day18:parts
    19 = aoc2019.day19:parts

[options.packages.find]
where=src

[options.package_data]
* = day*.txt

[tool:pytest]
testpaths = tests
